@@ -108,6 +108,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #22032: __qualname__ instead of __name__ is now always used to format
+  fully qualified class names of Python implemented classes.
+
 - Issue #22031: Reprs now always use hexadecimal format with the "0x" prefix
   when contain an id in form " at 0x...".
 
